URI path. [David]

=item *

L<Bric::Util::Burner>'s C<publish()> method no longer removes documents from
workflow after publishing them, as such is the responsbility of the code that
calls publish. The publish callback already did, and now so does the
L<Bric::SOAP::Workflow> C<publish()> method. Thanks to David Beaudet for the
report and Aaron Fuleki for the steps to replicate (Bug #98). [David]

=back

=head1 VERSION 1.10.8 (2009-11-14)

=head2 Improvements

=over

=item *

Added the C<sql_type> element to the export of field types from SOAP. This
prevents the SOAP server from having to guess the SQL type of a field type
when updating an element type. Thanks to David Oliveira for the report (Bug
#79). [David]

=item *

The C<AddModule> lines are now commented-out in the F<httpd.conf> generated by
the installer. As near as I can tell from my research, this directive hasn't
been relevant for a long time. Since we require 1.3.34 (ca. 2005), It seems
good enough to comment it out and add a note to uncomment them if necessary
(Bug #33). [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a compatibility issue in
L<Bric::Dist::Action::DTDValidate|Bric::Dist::Action::DTDValidate>. Apparently
C<get_last_error()> was removed from L<XML::LibXML|XML::LibXML> 1.59 "for
thread-safety reasons." This change backward-compatible with older versions of
XML::LibXML. [David]

=item *

Fixed a bug where a story published but with no resources (files) could cause
an error. Reported by Paul Hyland. [David]

=item *

Fixed a bug where assets could not be checked in and their version numbers
would revert to older ones (Bug #93). [Greg Heo & David]

=item *

Passing a false value for the C<published_version> parameter to the C<list()>
method of
L<Bric::Biz::Asset::Business::Story|Bric::Biz::Asset::Business::Story>,
L<Bric::Biz::Asset::Business::Media|Bric::Biz::Asset::Business::Media>, and
L<Bric::Biz::Asset::Template|Bric::Biz::Asset::Template> now works as